1.4 backward compatibility
git-svn-id: http://svn.apache.org/repos/asf/portals/jetspeed-2/trunk@471863 13f79535-47bb-0310-9956-ffa450edef68